--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 <div class="bg-blue-600 w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4">
                     <span class="text-white text-2xl">👤</span>
                 </div>
-                <h1 class="text-2xl font-bold text-gray-800">Sistem Absen Online</h1>
+                <h1 class="text-2xl font-bold text-gray-800">Sistem Absen Online Team MDS</h1>
                 <p class="text-gray-600 mt-2">Silakan login untuk melakukan absen</p>
             </div>
             
@@ -1845,3 +1845,4 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9786bba1e35ab29b',t:'MTc1Njc1MDMxNi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
