--- a/index.html
+++ b/index.html
@@ -874,8 +874,8 @@
         
         // Office location (specific coordinates provided)
         const officeLocation = {
-            lat: -6.2190665,
-            lng: 106.0912750,
+            lat: -6.204337,
+            lng: 106.073360,,
             radius: 100, // 100 meters radius
             name: "Kantor Pusat",
             address: "Jl. Contoh No. 123, Jakarta"
@@ -3287,3 +3287,4 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'978a7ea020b1959b',t:'MTc1Njc4OTc2MC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
